--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <img src = './pic.png' alt = 'CERV2' usemap = 'map'></img>
             <map name="map">
                 <area id = 'compresser' shape = 'poly' coords = '197,435,236,427,274,434,288,452,293,477,285,536,249,560,204,551,182,519,181,466,185,441' href = './index.txt'>
+                <area id = 'circuit'  shape="poly" href="./index.txt" coords="143,125,150,242,243,239,241,110" >
+                <area id = 'LED'  href="./index.txt" coords="150,45,136,77,204,68,217,31" shape="poly">
+                <area id= "" href="./index.txt" coords="214,265,219,363,130,365,124,262" shape="poly">
             </map>
         </div>
     </body>
