--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class ='title'>CERV2 Introduction</div>
         <div class = 'navigation'>
-            <button type = 'button' id = 'home' onclick="location.href='../index.html'">
+            <button type = 'button' id = 'home' onclick="location.href='./index.html'">
                 Home
             </button>
             <button type = 'button' id = 'calculation' onclick="location.href='./calculations/calculation.html'">
