--- a/calculations/calculation.html
+++ b/calculations/calculation.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel= 'stylesheet' type="text/css" href = './calculation.css'/>
+        <link rel= 'stylesheet' type="text/css" href = '../everything.css'/>
     </head>
     <body>
         <div id = 'top'>
