--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel= 'stylesheet' type="text/css" href = './style.css'/>
+        <link rel= 'stylesheet' type="text/css" href = './everything.css'/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- <script src="./jquery.js"></script> -->
         <script type="text/javascript" src="jquery-1.2.3.pack.js"></script>
@@ -12,6 +13,7 @@
         <script src = './index.js'></script>
     </head>
     <body>
+        
         <div class ='title'>CERV2 Introduction</div>
         <div class = 'navigation'>
             <button type = 'button' id = 'home' onclick="location.href='./index.html'">
