--- a/circuit/circuit.html
+++ b/circuit/circuit.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel= 'stylesheet' type="text/css" href = './circuit.css'/>
+        <link rel= 'stylesheet' type="text/css" href = '../everything.css'/>
     </head>
     <body>
         <div>
