--- a/calculations/calculation.html
+++ b/calculations/calculation.html
@@ -46,7 +46,7 @@
                 <div class = 'steps'>
                     &#7814 = m * (h<sub>2</sub> - h<sub>1</sub>)<br>
                     &nbsp;&nbsp; &nbsp;&nbsp;= (0.0013kg/s) * (274.104-233.2805)<br>
-                    &nbsp;&nbsp; &nbsp;&nbsp;= 0.04204kw
+                    &nbsp;&nbsp; &nbsp;&nbsp;= 0.04204kw<br>
                     &nbsp;&nbsp; &nbsp;&nbsp;= 42.02w
                 </div>
                 <div class = 'break'>Part 2: Calculation of the coefficient of performance</div>
@@ -56,12 +56,12 @@
                         <span class="symbol">/</span>
                         <span class="bottom">T<sub>hot</sub>-T<sub>cold</sub></span>
                     </span><br>
-                    &nbsp;&nbsp; &nbsp;&nbsp;= 
+                    &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;= 
                     <span class = 'frac'>249.85K
                         <span class="symbol">/</span>
                         <span class="bottom">327.55K - 249.85K</sub></span>
                     </span><br>
-                    &nbsp;&nbsp; &nbsp;&nbsp;= 3.216
+                    &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;= 3.216
                 </div>
                 <div class = 'break'>Part 3: Calculation of the max heat intake rate</div>
                 <div class = 'steps'>
