--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <button class = 'button' id = 'components' >
             Components
         </button>
+        <div class = 'show' id = 'cycle'>
+            <img src = './p_h_diagram.png' alt = 'cycle_graph' id = 'cycle_graph'>
+        </div>
         <div class = 'img' id = 'components_link' >
             <img src = './pic.png' alt = 'CERV2' usemap = '#mapp' id = 'componentM' class = 'map'>
             <map name="mapp" id = 'map1'>
