--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
         <button class = 'button' id = 'calculation' onclick="location.href='./calculations/calculation.html'">
             Calculations
         </button>
-        <button class = 'button' id = 'components' >
+        <button class = 'button' id = 'components' onclick="location.href='./components/components.html'">
             Components
+        </button>
+        <button class = 'button' id = 'cycle_diagram' onclick="location.href='./calculations/calculation.html'">
+            Cycles
         </button>
         <div class = 'show' id = 'cycle'>
             <img src = './p_h_diagram.png' alt = 'cycle_graph' id = 'cycle_graph'>
