--- a/calculations/calculation.html
+++ b/calculations/calculation.html
@@ -16,6 +16,12 @@
                 <button class = 'button' id = 'calculation' onclick="location.href='../calculations/calculation.html'">
                     Calculations
                 </button>
+                <button class = 'button' id = 'components' onclick="location.href='../components/components.html'">
+                    Components
+                </button>
+                <button class = 'button' id = 'cycle_diagram' onclick="location.href='../calculations/calculation.html'">
+                    Cycles
+                </button>
             </div>                   
         </div>
         <div id = 'intro'>
