--- a/calculations/calculation.html
+++ b/calculations/calculation.html
@@ -19,7 +19,7 @@
                 <button class = 'button' id = 'components' onclick="location.href='../components/components.html'">
                     Components
                 </button>
-                <button class = 'button' id = 'cycle_diagram' onclick="location.href='../calculations/calculation.html'">
+                <button class = 'button' id = 'cycle_diagram' onclick="location.href='../cycles/cycles.html'">
                     Cycles
                 </button>
             </div>                   
