--- a/cycles/cycles.html
+++ b/cycles/cycles.html
@@ -2,14 +2,19 @@
 <html>
 
 <head>
-    <link rel='stylesheet' type="text/css" href='./circuit.css' />
-    <link rel='stylesheet' type="text/css" href='../everything.css' />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel='stylesheet' type="text/css" href='../everything.css'>
+    <link rel='stylesheet' type="text/css" href='./cycles.css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="../jquery.metadata.min.js"></script>
+    <script type="text/javascript" src="../jquery.maphilight.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <div>
+    <div id='top'>
         <div class=title>
-            CERV2 Wired I/O
+            Cycles
         </div>
         <div class='navigation'>
             <button class='button' id='home' onclick="location.href='../index.html'">
@@ -24,17 +29,6 @@
             <button class='button' id='cycle_diagram' onclick="location.href='../cycles/cycles.html'">
                 Cycles
             </button>
-        </div>
-        <div id='cir'>
-            CERV2 I/O Built-in<br>
-            • One Output – X0<br>
-            • Dry contact NO, Comm, NC<br>
-            • Max 10A<br>
-            • One 24VAC Output<br>
-            • Max 0.5A<br>
-            • One Signal Input – I0<br>
-            • Dry contact or 24V sense<br>
-            • Max 24VAC
         </div>
     </div>
 </body>
