--- a/screen/screen.html
+++ b/screen/screen.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <link rel='stylesheet' type="text/css" href='./circuit.css' />
+    <link rel='stylesheet' type="text/css" href='./screen.css' />
     <link rel='stylesheet' type="text/css" href='../everything.css' />
 </head>
 
 <body>
     <div>
         <div class=title>
-            CERV2 Wired I/O
+            LED
         </div>
         <div class='navigation'>
             <button class='button' id='home' onclick="location.href='../index.html'">
@@ -24,17 +24,6 @@
             <button class='button' id='cycle_diagram' onclick="location.href='../cycles/cycles.html'">
                 Cycles
             </button>
-        </div>
-        <div id='cir'>
-            CERV2 I/O Built-in<br>
-            • One Output – X0<br>
-            • Dry contact NO, Comm, NC<br>
-            • Max 10A<br>
-            • One 24VAC Output<br>
-            • Max 0.5A<br>
-            • One Signal Input – I0<br>
-            • Dry contact or 24V sense<br>
-            • Max 24VAC
         </div>
     </div>
 </body>
